force-app/main/default/objects/Contact/fields/Confirmation_Date_no_E_Mail_Entry__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date_no_E_Mail_Entry__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Confirmation Date no E-Mail Entry</label>
    <type>DateTime</type>
</CustomField>