force-app/main/default/objects/Contact/fields/Core_Authority_Regulation_Clarified__c.field-meta.xml
<CustomField>
    <fullName>Core_Authority_Regulation_Clarified__c</fullName>
    <description>1. Not integration relevant
2. CORE
3.</description>
    <inlineHelpText>Information has been gathered on which regulations apply to the acceptance / permission of a grant for a politically exposed person.</inlineHelpText>
    <label>Interal Authority Regulation Clairified</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Core_Politically_exposed_Person__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>