force-app/main/default/objects/Contact/fields/Core_Politically_exposed_Person__c.field-meta.xml
<CustomField>
    <fullName>Core_Politically_exposed_Person__c</fullName>
    <description>1. Not integration relevant
2. Core
3.</description>
    <inlineHelpText>A politically exposed person is a person, who, due to their position in the government or in the public domain or their close connection to a person like that (spouse), could potentially be corruptible.</inlineHelpText>
    <label>Politically exposed Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>