force-app/main/default/objects/Contact/fields/Date_of_Revocation_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Revocation_Newsletter__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Date of Revocation Newsletter</label>
    <type>DateTime</type>
</CustomField>