force-app/main/default/objects/Contact/fields/Expertise_Interest__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Interest__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Expertise/ Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Construction Equipment</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Construction Tools</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Access Equipment</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Accomodation Units</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Vehicles</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Traffic Safety Equipment</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Generally</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Electric &amp; Energy (EE)</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Logistic Consult. &amp; Mgmt.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>