force-app/main/default/objects/Contact/fields/Further_Function__c.field-meta.xml
<CustomField>
    <fullName>Further_Function__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZR
3. SF-1136</description>
    <label>Further Function</label>
    <length>30</length>
    <type>Text</type>
</CustomField>