force-app/main/default/objects/Contact/fields/Has_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Email__c</fullName>
    <formula>IF(len(Email)=0, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Email</label>
    <type>Checkbox</type>
</CustomField>