force-app/main/default/objects/Contact/fields/Has_Phone__c.field-meta.xml
<CustomField>
    <fullName>Has_Phone__c</fullName>
    <formula>if(len( Phone)=0 , if(len(MobilePhone)=0,&quot;nein&quot;,&quot;nur Mobil&quot;),if(len(MobilePhone)=0,&quot;nur Festnetz&quot;,&quot;ja&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Phone</label>
    <type>Text</type>
</CustomField>