force-app/main/default/objects/Contact/fields/Inital_Contact__c.field-meta.xml
<CustomField>
    <fullName>Inital_Contact__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Inital Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>