force-app/main/default/objects/Contact/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1084</description>
    <formula>HYPERLINK(&quot;/lightning/r/Contact/&quot; +  Id + &quot;/view&quot;,  LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>