force-app/main/default/objects/Contact/fields/Modified_by_User__c.field-meta.xml
<CustomField>
    <fullName>Modified_by_User__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Modified by User</label>
    <length>15</length>
    <type>Text</type>
</CustomField>