force-app/main/default/objects/Contact/fields/PersonID__c.field-meta.xml
<CustomField>
    <fullName>PersonID__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <externalId>true</externalId>
    <label>PersonID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>