force-app/main/default/objects/Contact/fields/Revocation_Direct_Mailing_Letter_Post__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Direct_Mailing_Letter_Post__c</fullName>
    <defaultValue>true</defaultValue>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Revocation Direct Mailing/ Letter Post</label>
    <type>Checkbox</type>
</CustomField>