force-app/main/default/objects/Contact/fields/Revocation_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Newsletter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Revocation Newsletter</label>
    <type>Checkbox</type>
</CustomField>