force-app/main/default/objects/Contact/fields/Save_without_Email__c.field-meta.xml
<CustomField>
    <fullName>Save_without_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (Grace)
2. ZR
3. Use this field to disable the validation rule that is set on the Email address field to save a contact without an email address</description>
    <inlineHelpText>If you want to save a Contact without an Email address please check this box.</inlineHelpText>
    <label>Save without Email</label>
    <type>Checkbox</type>
</CustomField>