force-app/main/default/objects/Contact/fields/Test_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Test_SFDC__c</fullName>
    <label>Test SFDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>