force-app/main/default/objects/Contact/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>23</fullName>
                <label>Dr.</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Dipl.-Ing.</label>
            </value>
            <value>
                <fullName>38</fullName>
                <label>Mstr.</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>B.A.</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>B.BA.</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>B.Eng.</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>B.Sc.</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Major</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Bmstr.</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>DDr.</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Dipl. Arch.</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Dipl. Bw.</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Dipl.-Ing. Gartenbau (FH)</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Dipl.-Ing. (FH)</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Dipl.-Ing. Dr.</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Dipl.-Ing. Mag.</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Dipl.-Ing. Mag. Dr.</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Dipl.-Kff.</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Dipl.-Kfm.</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Dipl.-Wirt.-Ing.</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Dir.</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Dr. Dipl.-Ing.</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Dr. h.c.</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Dr. Prof.</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Dr.-Ing.</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Gem. R.</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Ing.</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>M.A.</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>MBA</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>M.Eng.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>