force-app/main/default/objects/Contact/recordTypes/ZR_Contact_Edit.recordType-meta.xml
<RecordType>
    <fullName>ZR_Contact_Edit</fullName>
    <active>true</active>
    <label>Kontakt</label>
</RecordType>