force-app/main/default/objects/Contact/recordTypes/ZR_Contact_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>ZR_Contact_Read_Only</fullName>
    <active>true</active>
    <description>Record Type for Contacts with Deletion Code flag.</description>
    <label>Contact Read-Only</label>
</RecordType>