force-app/main/default/objects/Contact/validationRules/ZR_FirstNameMandatory_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_FirstNameMandatory_Contact</fullName>
    <active>true</active>
    <description>SF-99 This rule ensures, that the First Name on the contact is always filled.</description>
    <errorConditionFormula>ISBLANK(FirstName)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter a First Name.</errorMessage>
</ValidationRule>