force-app/main/default/objects/Contact/validationRules/ZR_LastNameLenght.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_LastNameLenght</fullName>
    <active>true</active>
    <description>SF-844 This validation rule ensures, that the Last Name of a Contact is not longer than 30 characters.</description>
    <errorConditionFormula>LEN( LastName )&gt; 30
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Please do not enter more than 30 characters for the Last Name of a Contact.</errorMessage>
</ValidationRule>