force-app/main/default/objects/Contact/validationRules/ZR_SalutationMandatory_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_SalutationMandatory_Contact</fullName>
    <active>true</active>
    <description>SF-99 This rule ensures, that the salutation on the contact is always filled.</description>
    <errorConditionFormula>ISPICKVAL(Salutation, &quot;&quot;)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Salutation</errorDisplayField>
    <errorMessage>Please enter a Salutation.</errorMessage>
</ValidationRule>