force-app/main/default/objects/Contact/validationRules/ZR_SaveWithoutEmailAddress_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_SaveWithoutEmailAddress_Contact</fullName>
    <active>true</active>
    <description>SF-99 Inform user that if they want to save an account without an email address they need to check the checkbox &quot;Save without Email&quot;</description>
    <errorConditionFormula>AND (ISBLANK( Email ), Save_without_Email__c = false)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>You are about to save this Contact without an email address. If this is correct please confirm with &quot;Save without Email&quot; and add the email address as soon as it is known.</errorMessage>
</ValidationRule>