force-app/main/default/objects/Contact/validationRules/ZR_ZipCode_Validation_999.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_999</fullName>
    <active>true</active>
    <description>SF-113 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{3}&quot;). Example: 999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(MailingPostalCode)),
OR(
MailingCountry == &quot;FO&quot;,
MailingCountry == &quot;IS&quot;,
MailingCountry == &quot;MG&quot;,
MailingCountry == &quot;PG&quot;
)),
NOT(REGEX(MailingPostalCode, (&quot;\\d{3}&quot;))),FALSE)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of three numbers. Example: 999</errorMessage>
</ValidationRule>