force-app/main/default/objects/Contact/validationRules/ZR_ZipCode_Validation_999999.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_999999</fullName>
    <active>true</active>
    <description>SF-113 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{6}&quot;). Example: 999999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(MailingPostalCode)),
OR(
MailingCountry == &quot;BY&quot;,
MailingCountry == &quot;CN&quot;,
MailingCountry == &quot;EC&quot;,
MailingCountry == &quot;IN&quot;,
MailingCountry == &quot;KZ&quot;,
MailingCountry == &quot;KG&quot;,
MailingCountry == &quot;RO&quot;,
MailingCountry == &quot;RU&quot;,
MailingCountry == &quot;SG&quot;,
MailingCountry == &quot;TJ&quot;,
MailingCountry == &quot;UZ&quot;
)),
NOT(REGEX(MailingPostalCode, (&quot;\\d{6}&quot;))),FALSE)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of six numbers. Example: 999999</errorMessage>
</ValidationRule>