force-app/main/default/objects/Contact/validationRules/ZR_ZipCode_Validation_999_99.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_999_99</fullName>
    <active>true</active>
    <description>SF-113 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{3}-\\d{2}&quot;). Example: 999-99</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(MailingPostalCode)),
OR(
MailingCountry == &quot;CZ&quot;,
MailingCountry == &quot;GR&quot;,
MailingCountry == &quot;SK&quot;,
MailingCountry == &quot;SE&quot;
)),
NOT(REGEX(MailingPostalCode, (&quot;\\d{3}[ ]\\d{2}&quot;))),FALSE)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should start with three numbers, followed by a space and two numbers. Example: 999 99</errorMessage>
</ValidationRule>