force-app/main/default/objects/Contact/validationRules/ZR_ZipCode_Validation_AD.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_AD</fullName>
    <active>true</active>
    <description>SF-113 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z]{2}\\d{3}&quot;). Example: AA999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(MailingPostalCode)),
MailingCountry == &quot;AD&quot;),
NOT(REGEX(MailingPostalCode, (&quot;[A-Z]{2}\\d{3}&quot;))),FALSE)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of two uppercase letters and three numbers. Example: AA999</errorMessage>
</ValidationRule>