force-app/main/default/objects/Contact/validationRules/ZR_ZipCode_Validation_AZ.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_AZ</fullName>
    <active>true</active>
    <description>SF-113 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{4}&quot;) or (&quot;\\d{6}&quot;). Example: 9999 or 999999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(MailingPostalCode)),
MailingCountry == &quot;AZ&quot;),
NOT(
OR(
REGEX(MailingPostalCode, (&quot;\\d{4}&quot;)),
REGEX(MailingPostalCode, (&quot;\\d{6}&quot;))
)
),FALSE)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of four or six numbers. Example: 9999 or 999999</errorMessage>
</ValidationRule>