force-app/main/default/objects/Contact/validationRules/ZR_ZipCode_Validation_BN.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_BN</fullName>
    <active>true</active>
    <description>SF-113 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;[A-Z]{2}\\d{3,4}&quot;). Example: AA9999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(MailingPostalCode)),
MailingCountry == &quot;BN&quot;),
NOT(REGEX(MailingPostalCode, (&quot;[A-Z]{2}\\d{3,4}&quot;))),FALSE)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of two uppercase letters followed by three or four numbers. Example: AA9999</errorMessage>
</ValidationRule>