force-app/main/default/objects/Contact/validationRules/ZR_ZipCode_Validation_BR.validationRule-meta.xml
<ValidationRule>
    <fullName>ZR_ZipCode_Validation_BR</fullName>
    <active>true</active>
    <description>SF-113 This validation rule should ensure, that all Zip Codes are in the correct format according to their respective country. Format (&quot;\\d{8}&quot;) or (&quot;\\d{5}[-]\\d{3}&quot;). Example: 99999999 or 99999-999.</description>
    <errorConditionFormula>IF(
AND(
NOT(ISBLANK(MailingPostalCode)),
MailingCountry == &quot;BR&quot;),
NOT(
OR(
REGEX(MailingPostalCode,(&quot;\\d{8}&quot;)),
REGEX(MailingPostalCode,(&quot;\\d{5}[-]\\d{3}&quot;))
)
),FALSE)
&amp;&amp; $Permission.Core_Contact_Bypass_Validation_Rules = FALSE</errorConditionFormula>
    <errorMessage>Please enter a valid format for the Zip Code! This should consist of eight numbers and can include a hyphen between the fifth and the sixth number. Example: 99999999 or 99999-999.</errorMessage>
</ValidationRule>